--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 
 <head>
 
-    
+    <link rel="stylesheet" href="colore.css">
 
 </head>
 
 
 <body>
 
-    <h1> a ver si apruebo </h1>
+    <h1 class="titulo"> a ver si apruebo </h1>
+
+    <img src="imagenes/25513.jpg" alt="cara feliz" class="carita">
+
+    <a href="https://www.facebook.com" target="_blank "> FACEBOOK </a>
+
 
 </body>
