--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 
+
 <head>
 
     <link rel="stylesheet" href="colore.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagina de Ignacio</title>
+    <meta name="description" content="esta pagina trata sobre...">
 
 </head>
 
 
+
 <body>
 
-    <h1 class="titulo"> a ver si apruebo </h1>
+    <div class="presentacion">
 
-    <img src="imagenes/25513.jpg" alt="cara feliz" class="carita">
+        <h1 class="titulo"> Hola soy ignacio </h1>
 
-    <a href="https://www.facebook.com" target="_blank "> FACEBOOK </a>
+        <img src="imagenes/25513.jpg" alt="cara feliz" class="carita">
 
+    </div>
+
+    <div class="data-personal">
+
+        <ul>
+                <li>Me gusta jugar jueguitos</li>
+                <li>me gusta dormir</li>
+                <li>me gusta el rock</li>
+        </ul>
+
+    </div>
+
+    <div class="seguime-en">
+
+        <a href="https://www.facebook.com" target="_blank "> FACEBOOK </a>
+        <a href="https://www.instagram.com" target="_blank "> INSTAGRAM </a>
+        <a href="https://www.x.com" target="_blank "> TWITTER </a>
+
+    </div>
 
 </body>
