--- a/descarga.html
+++ b/descarga.html
@@ -6,6 +6,7 @@
     <title>Sow & Suffer — Descarga</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="media/imagenes/logo.png" type="image/png">
 </head>
 
 <body class="download-body">
@@ -22,5 +23,6 @@
 
 
 </body>
+
 
 </html>
