--- a/lore.html
+++ b/lore.html
@@ -6,6 +6,7 @@
     <title>Sow & Suffer — Lore</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="media/imagenes/logo.png" type="image/png">
 </head>
 
 <body class="lore-body">
@@ -44,5 +45,6 @@
     <script src="lore-book.js"></script>
 
 </body>
+
 
 </html>
