--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -6,6 +6,7 @@
     <title>Sow & Suffer — Sobre mí</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="media/imagenes/logo.png" type="image/png">
 </head>
 
 <body class="about-body">
@@ -31,5 +32,6 @@
     <script src="scroll-top.js"></script>
 
 </body>
+
 
 </html>
